--- a/static/css/creative.css
+++ b/static/css/creative.css
@@ -493,7 +493,7 @@ body {
     margin-top: 30px;
 }
 .person {
-    padding: 30px 0;
+    padding: 50px 0;
 }
 .person__photo {
     margin: 0 auto 15px;
@@ -533,4 +533,57 @@ body {
 }
 .person__address > span:last-child:after {
     content: '.';
+}
+@keyframes animateModal {
+    0% {
+        transform: scale(0);
+    }
+    50% {
+        transform: scale(1);
+        background-color: rgba(0, 0, 0, 0);
+    }
+    100% {
+        background-color: rgba(0, 0, 0, .35);
+        transform: scale(1);
+    }
+}
+.modal-mask {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    cursor: default;
+    transition: background-color 0.4s;
+    transform: scale(0);
+    animation: animateModal .8s forwards;
+}
+.modal-content {
+    margin-top: 80px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    position: relative;
+}
+.modal-content .close {
+    width: 32px;
+    height: 32px;
+    -webkit-border-radius: 16px;
+    -moz-border-radius: 16px;
+    border-radius: 16px;
+    background: #000;
+    position: absolute;
+    top: -16px;
+    right: -16px;
+    opacity: .4;
+}
+.modal-mask.close {
+    animation: none;
+    transform: scale(1);
+    background-color: rgba(0,0,0,0);
+    overflow: hidden;
+}
+.modal-mask.close .modal-content {
+    transform: translateX(2000px);
+    transition: transform .8s;
 }
