Refactored frontend, added react js, css refactored

--- a/frontend/static/portfolio/sass/portfolio.sass
+++ b/frontend/static/portfolio/sass/portfolio.sass
@@ -1,7 +1,7 @@
-@import "bootstrap/portfolioBootstrap"
-@import "variables"
-@import "mixins"
-@import "style"
+@import "portfolioBootstrap"
+@import "../../sass/variables"
+@import "../../sass/mixins"
+@import "../../sass/style"
 
 html,
 body
