--- a/frontend/static/sass/_variables.sass
+++ b/frontend/static/sass/_variables.sass
@@ -6,7 +6,11 @@ $blue-dark: rgba(0, 40, 69, 1)
 $blue-hover: rgba(0, 84, 145, 1)
 
 $font-color: #222
-$font-color-light: #fafafa
+$font-light: #fafafa
+$font-light-hover: #c8c8c8
+
+$font-dark: rgba(100, 100, 100, 1)
+$font-dark-hover: rgba(50, 50, 50, 1)
 
 $gray-border: #eee
 $gray-background: #ddd
