--- a/static/css/creative.css
+++ b/static/css/creative.css
@@ -86,11 +86,12 @@ aside {
     fill: #666;
     color: #666;
     margin:0 5px;
-    transition: color .3s, fill .3s;
+    transition: color .3s, fill .3s, transform .3s cubic-bezier(1, 3, 1, 1);
 }
 .svg-icon.svg-icon__socials:hover {
     fill: #f05f40;
     color: #f05f40;
+    transform: scale(1.5);
 }
 .svg-icon.svg-icon__contacts {
     fill: #f05f40;
@@ -299,16 +300,31 @@ header .header-content .header-content-inner p {
     position: relative;
     margin: 0 auto;
     cursor: pointer;
+    overflow: hidden;
 }
-.portfolio-box img {
+.portfolio-box img.cover {
     width: 100%;
     height: auto;
     background-position: 50% 0;
     background-size: cover;
     background-repeat: no-repeat;
     transition: background-position 3s, filter .3s;
+    transition-delay: .3s;
     -webkit-filter: grayscale(100%);
     filter: grayscale(100%);
+}
+.portfolio-box img.logo {
+    width: 180;
+    height: 80px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -40px;
+    margin-left: -90px;
+    background-position: 50% 50%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    transition: transform .3s, opacity .3s;
 }
 .portfolio-box .portfolio-box-caption {
     display: block;
@@ -318,11 +334,9 @@ header .header-content .header-content-inner p {
     height: 100%;
     text-align: center;
     color: #fff;
-    opacity: 0;
+    transform: scale(0);
     background: rgba(240,95,64,.7);
-    -webkit-transition: all .35s;
-    -moz-transition: all .35s;
-    transition: all .35s;
+    transition: all .3s;
 }
 
 .portfolio-box .portfolio-box-caption .portfolio-box-caption-content {
@@ -342,7 +356,7 @@ header .header-content .header-content-inner p {
 .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
     text-transform: uppercase;
     font-size: 14px;
-    font-weight: 600;
+    font-weight: 700;
 }
 
 .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
@@ -350,12 +364,16 @@ header .header-content .header-content-inner p {
 }
 
 .portfolio-box:hover .portfolio-box-caption {
-    opacity: 1;
+    transform: scale(1);
 }
-.portfolio-box:hover img {
+.portfolio-box:hover img.cover {
     -webkit-filter: grayscale(0%);
     filter: grayscale(0%);
     background-position: 100% 50%;
+}
+.portfolio-box:hover img.logo {
+    transform: scale(5);
+    opacity: 0;
 }
 
 @media(min-width:768px) {
