--- a/static/css/creative.css
+++ b/static/css/creative.css
@@ -86,7 +86,7 @@ aside {
     fill: #666;
     color: #666;
     margin:0 5px;
-    transition: color .3s, fill .3s, transform .3s cubic-bezier(1, 3, 1, 1);
+    transition: color .3s, fill .3s, transform .3s;
 }
 .svg-icon.svg-icon__socials:hover {
     fill: #f05f40;
@@ -722,4 +722,98 @@ footer {
         margin-bottom: 3px;
         box-shadow: 0 3px 0 0 #f05f40;
     }
+}
+@keyframes destroy_page {
+    0% {
+        transform: rotate(0) scale(1) translate(0px, 0px);
+    }
+    25% {
+        transform: rotate(330deg) scale(.6) translate(50px, 200px);
+    }
+    50% {
+        transform: rotate(110deg) scale(.85) translate(250px, 30px);
+    }
+    75% {
+        transform: rotate(600deg) scale(.3) translate(400px, 280px);
+    }
+    100% {
+        transform: rotate(0) scale(1) translate(0px, 0px);
+    }
+}
+@keyframes destroy_page_another {
+    0% {
+        transform: rotate(0) scale(.5) translate(0px, 0px);
+    }
+    25% {
+        transform: rotate(120deg) scale(.2) translate(186px, 330px);
+    }
+    50% {
+        transform: rotate(360deg) scale(.7) translate(10px, 175px);
+    }
+    75% {
+        transform: rotate(720deg) scale(.4) translate(156px, 95px);
+    }
+    100% {
+        transform: rotate(0) scale(1) translate(0px, 0px);
+    }
+}
+#quit {
+    cursor: pointer;
+}
+.navbar-header {
+    position: relative;
+}
+.header-socials {
+    position: absolute;
+    left: 100%;
+    top: 9px;
+    white-space: nowrap;
+    height: 32px;
+}
+.header-socials a {
+    display: inline-block;
+    height: 32px;
+}
+.header-socials .svg-icon {
+    fill: rgba(255,255,255,.7);
+    transform: none !important;
+}
+.links {
+    padding-top: 15px;
+    font-size: 18px;
+}
+.body-drop {
+    transform: scale(.3);
+    transform-origin: 50% 50%;
+}
+.body-drop #mainNav {
+    background: rgba(0,0,0,.7);
+    position: static;
+}
+.drop-page {
+    -webkit-animation-delay: 2s;
+    animation-delay: 2s;
+    transform-origin: 0 0;
+}
+.drop-page:nth-child(odd) {
+    animation: destroy_page 2s forwards;
+}
+.drop-page:nth-child(even) {
+    animation: destroy_page_another 2s forwards;
+}
+.drop-page-1 {
+    -webkit-animation-delay: 0;
+    animation-delay: 0;
+}
+.drop-page-2 {
+    -webkit-animation-delay: .5s;
+    animation-delay: .5s;
+}
+.drop-page-3 {
+    -webkit-animation-delay: 1s;
+    animation-delay: 1s;
+}
+.drop-page-4 {
+    -webkit-animation-delay: 1.5s;
+    animation-delay: 1.5s;
 }
